# xmos_usb_mems_interface

./: .gitignore
01Firmware/PDM_USB/PDM_USB/: Makefile  README.md  SST-XMOS-001_V1.xn  XUF216-256-TQ128-C20.xn
01Firmware/PDM_USB/PDM_USB/src/: audio.h  audio.xc  devicedefines.h  flashlib_user.c  main.xc  reboot.xc  warnings.xc
01Firmware/PDM_USB/PDM_USB/src/core/: customdefines.h
01Firmware/PDM_USB/PDM_USB/src/endpoint0/: audiorequests.xc  chanstrings.h  descriptors.h  endpoint0.c
01Firmware/PDM_USB/PDM_USB/src/extensions/: audiohw.xc  pdm_user.xc
01Firmware/PDM_USB/PDM_USB/src/pdm_mics/: mic_array_conf.h  pcm_pdm_mic.h  pcm_pdm_mic.xc
01Firmware/PDM_USB/PDM_USB/src/usb_buffer/: decouple.xc  usb_buffer.xc
01Firmware/PDM_USB/lib_mic_array/api/: mic_array.h  mic_array_frame.h
01Firmware/PDM_USB/lib_mic_array/src/: .decimate_to_pcm_4ch.S.swp  decimate_to_pcm_4ch.S  decimator_interface.xc  pdm.xc  pdm_rx.S
01Firmware/PDM_USB/lib_mic_array/src/fir/: create-filter  fir_coefs.h  fir_coefs.xc  fir_design.py
01Firmware/PDM_USB/module_dfu/: .cproject  module_build_info
01Firmware/PDM_USB/module_dfu/host/xmos_dfu_osx/: CMakeLists.txt  xmosdfu.cpp
01Firmware/PDM_USB/module_dfu/src/: dfu.xc
